syntax = "proto3";

option go_package = "github.com/aloknerurkar/gopcp/core/pb";

package protocols.core;

message MessageData {
    // shared between all requests
    string clientVersion = 1; // client version
    int64 timestamp = 2;      // unix time
    string id = 3;            // allows requesters to use request data when processing a response
    bool gossip = 4;          // true to have receiver peer gossip the message to neighbors
    string nodeId = 5;        // id of node that created the message (not the peer that may have sent it). =base58(multihash(nodePubKey))
    bytes nodePubKey = 6;     // Authoring node Secp256k1 public key (32bytes) - protobufs serielized
    bytes sign = 7;           // signature of message data + method specific data by message authoring node.
}

message EmptyMessage {
    MessageData messageData = 1;
}
